--- a/funcpred/templates/show_gene_search.html
+++ b/funcpred/templates/show_gene_search.html
@@ -19,6 +19,19 @@
 	</ul>
 </div>
 
+<form action="http://revigo.irb.hr/" method="post" target="_blank">
+      <input type="hidden" name="inputGoList" value="
+{% for row in data %}
+{{row.function.keyword}} {{row.best_fdr}}
+{% endfor %}
+">
+      <input type="hidden" name="isPValue" value="yes"/>
+      <input type="hidden" name="whatIsBetter" value="lower">
+      <input type="submit" name="startRevigo" value="Visualize a summary on Revigo" />
+</form>
+
+
 {% render_table table %}
+
 
 {% endblock%}
