--- a/funcpred/templates/show_gene_search.html
+++ b/funcpred/templates/show_gene_search.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load mox_filters %}
 {% block main %}
 
 
@@ -27,7 +28,7 @@
 	</ul>
 </div>
 
-<table id="data_table" class="display" width="100%" cellspacing="0">
+<table id="data_table" class="display" width="100%" cellspacing="0" data-order_col="4">
 	<thead>
 		<tr>
 			<th>keyword</th>
@@ -42,9 +43,9 @@
 	<tbody>
 {% for row in data%}
 	<tr>
-		<td {%if row.known%}class="known"{%endif%}>{{row.function.keyword}}</td>
+		<td {%if row.known%}class="known"{%endif%}>{{row.function.keyword|keyfy}}</td>
 		<td>{{row.function.ontology}}</td>
-		<td>{{row.function.description}}</td>
+		<td>{{row.function.description|replace:"/_/ "}}</td>
 		<td>{{row.best_fdr}}</td>
 		{%for v in row.exp_sources %}
 			<td>{% if v %} &#11035; {%endif%}</td>
