Description of red labels in show_gene_search.html

--- a/funcpred/templates/show_gene_search.html
+++ b/funcpred/templates/show_gene_search.html
@@ -25,6 +25,7 @@
 				<strong>All</strong>
 			{%endfor%}
 		</li>
+		<li> keywords in red represent functions know to be associated to the gene</li>
 	</ul>
 </div>
 
