--- a/funcpred/templates/search_gene.html
+++ b/funcpred/templates/search_gene.html
@@ -1,5 +1,5 @@
 {% extends "search.html" %}
 {%block help%}
 	<p>Search your gene by digiting its name in the "Gene" field.<p>
-	<p>If you cannot find the derired gene please go to <a href="http://sep2013.archive.ensembl.org/Homo_sapiens/Info/Index">ENSEBL</a> and cut and paste the right human ENSG.</p>
+	<p>If you cannot find the desired gene please go to <a href="http://sep2013.archive.ensembl.org/Homo_sapiens/Info/Index">ENSEBL</a> and cut and paste the right human ENSG.</p>
 {% endblock%}
